--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h1 {
+  font-size: 89px;
+}
+h2 {
+  font-size: 67px;
+}
+h3 {
+  font-size: 50px;
+}
+h4 {
+  font-size: 37px;
+}
+h5 {
+  font-size: 28px;
+}
+h6 {
+  font-size: 22px;
+}
+p {
+  font-size: 16px;
+}
+small {
+  font-size: 12px;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Ubuntu", sans-serif;
+  margin: 0;
+}
+h1,
+h2,
+h3 {
+  line-height: 110%;
+  margin: 0;
+}
+h4,
+h5,
+h6 {
+  line-height: 140%;
+  margin: 0;
+}
+
+p {
+  line-height: 150%;
+}
+
+h5,
+p,
+label,
+li {
+  font-family: "Source Sans Pro", sans-serif;
+  margin: 0;
+}
+ul {
+  list-style: none;
 }
