--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #f2f4f6;
 }
-
+#root {
+  transition: all .05s ease-out;
+}
 h1 {
   font-size: 89px;
 }
